RESOLVED FIXED14257
Web Inspector lists favicon.ico as "other" instead of "image"
https://bugs.webkit.org/show_bug.cgi?id=14257
Summary Web Inspector lists favicon.ico as "other" instead of "image"
David Smith
Reported 2007-06-20 20:49:58 PDT
In the new inspector, favicon.ico isn't considered an image. This could be considered correct (it's not an image displayed on the page, so could logically be considered separately), but xenon indicated it was a bug rather than an intentional decision.
Attachments
Sam Weinig
Comment 1 2007-06-25 17:52:35 PDT
Fix landed in r23776.
Note You need to log in before you can comment on or make changes to this bug.