        Reviewed by Adam Roben.

Patch for http://bugs.webkit.org/show_bug.cgi?id=14257
        Web Inspector lists favicon.ico as "other" instead of "image"

        * page/InspectorController.cpp:
        (WebCore::InspectorResource::type):



git-svn-id: svn://svn.chromium.org/blink/trunk@23776 bbb929c8-8fbe-4397-9dbb-9b2b20218538